# catatdulu

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  package.json  tsconfig.web.json
resources/: welcome.md
src/: ckeditor.js  index.html  main.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/main/: index.ts
src/main/lib/: index.ts
src/renderer/src/: App.tsx
src/renderer/src/components/: AppLayout.tsx
src/renderer/src/utils/: index.ts
src/shared/: constants.ts
src/theme/: coffee.css  default.css
